hooks, api修正, openapi修正
